force-app/src/objects/OrderApi__Item_Subscription_Plan__c.object
<CustomObject>
    <description>Links a &quot;Subscription&quot; Item to a Subscription Plan to enable the linked Item to be sold in conjunction with the linked Subscription Plan.</description>
    <fields>
        <fullName>OrderApi__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the default Subscription Plan for related Item.</description>
        <inlineHelpText>Defines the default Subscription Plan for related Item.</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <description>** Required ** Link to the Item enabled for the related Subscription Plan.</description>
        <inlineHelpText>** Required ** Link to the Item enabled for the related Subscription Plan.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Subscription Plans</relationshipLabel>
        <relationshipName>Subscription_Plan_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <description>** Required ** Link to the Subscription Plan that the related Subscription Item is being enabled for.</description>
        <inlineHelpText>** Required ** Link to the Subscription Plan that the related Subscription Item is being enabled for.</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Subscription_Plan_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Item Subscription Plan</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Item Subscription Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Subscription Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>